Prevent nav collapsing for older versions of Safari on tablet

--- a/app/assets/stylesheets/components/shared/c-header.scss
+++ b/app/assets/stylesheets/components/shared/c-header.scss
@@ -1,8 +1,5 @@
 .c-header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  position: relative;
   width: 100%;
   height: auto;
   // margin-top: 10px;
